--- a/styles/custom.css
+++ b/styles/custom.css
@@ -636,7 +636,7 @@ a:focus {
 .contact_section {
   position: relative;
   color: #ffffff;
-  background-color: #14013e;
+  background-color: #0d0128df;
 
 }
 
