--- a/styles/custom.css
+++ b/styles/custom.css
@@ -117,11 +117,21 @@ body {
   left: 0;
   width: 100%;
   height: 100%;
-  background: -webkit-gradient(linear, left top, right top, from(rgba(0, 0, 0, 0.9)), to(rgba(0, 0, 0, 0.6)));
-  /* Adjust opacity values here */
   background: linear-gradient(to right, rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.6));
   /* Adjust opacity values here */
 }
+
+.service-box-bg::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(to right, rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.6));
+  /* Adjust opacity values here */
+}
+
 
 
 .sub_page .hero_area {
@@ -484,11 +494,11 @@ a:focus {
 }
 
 .service_section {
-  background-color: #0d0438;
+  background-color: #ffffff;
 }
 
 .service_section .heading_container {
-  color: #ffffff;
+  color: #050505;
 }
 
 .service_section .box {
@@ -496,7 +506,7 @@ a:focus {
   padding: 25px 15px;
   text-align: center;
   -webkit-box-shadow: 0 0 15px 0 rgba(0, 0, 0, 0.2);
-  box-shadow: 0 0 15px 0 rgba(0, 0, 0, 0.2);
+  box-shadow: 0 0 15px 0 rgba(0, 0, 0, 0.452);
   margin-top: 45px;
 }
 
