--- a/styles/custom.css
+++ b/styles/custom.css
@@ -494,11 +494,11 @@ a:focus {
 }
 
 .service_section {
-  background-color: #ffffff;
+  background-color: #010012;
 }
 
 .service_section .heading_container {
-  color: #050505;
+  color: #fefbfb;
 }
 
 .service_section .box {
