--- a/styles/custom.css
+++ b/styles/custom.css
@@ -110,6 +110,7 @@ body {
   min-height: 100%;
 }
 
+
 .hero_bg_box::before {
   content: "";
   position: absolute;
@@ -960,5 +961,57 @@ a:focus {
   max-width: 4rem;
 }
 
+
 /* end footer section*/
 /*# sourceMappingURL=style.css.map */
+
+
+/*header section*/
+.heron_area {
+  min-height: 60vh;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  position: relative;
+}
+
+.heron_bg_box {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  z-index: -1;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+}
+
+.heron_bg_box .img-box {
+  width: 100%;
+}
+
+.heron_bg_box .img-box img {
+  min-width: 100%;
+  min-height: 100%;
+}
+
+
+.heron_bg_box::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(to right, rgb(0, 0, 0), rgb(0, 0, 0));
+  /* Adjust opacity values here */
+}
